# dynamic_task_mapping_for_dbt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
dags/: astronomer_cosmos.py  astronomer_cosmos_dag.py  dbt_airflow_factory_dag.py  dynamic_task_mapping_dag.py  one_airflow_task_dag.py  task_per_layer_dag.py  test_dag.py
dags/config/dev/: airflow.yml  bash.yml  dbt.yml  execution_env.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/common/: dim_customers.sql
dbt_project/models/marts/finance/: _marts_finance.yml  fct_cpc.sql
dbt_project/models/marts/marketing/: _marketing__models.yml
dbt_project/models/staging/google_ads/: stg_google_ads__account_report.sql  stg_google_ads__ad_group_report.sql  stg_google_ads__ad_report.sql  stg_google_ads__campaign_report.sql  stg_google_ads__keyword_report.sql  stg_google_ads__url_report.sql
dbt_project/models/staging/google_analytics/: stg_google_analytics__hits.sql  stg_google_analytics__page_views.sql
dbt_project/models/staging/stripe/: stg_stripe__payments.sql
dbt_project/scripts/: extract_staging_paths.py
dbt_project/seeds/: account_history_data.csv_old  account_stats_data.csv  ad_group_criterion_history_data.csv  ad_group_history_data.csv  ad_group_stats_data.csv  ad_history_data.csv  ad_stats_data.csv  campaign_history_data.csv  campaign_stats_data.csv  keyword_stats_data.csv
plugins/: xebia_dbt.py
